--- a/tabla.html
+++ b/tabla.html
@@ -3,71 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>practica</title>
 </head>
 <body>
-    <h1>hola mundo </h1>
-    <h2>hola mundo </h2>
-    <h3>hola mundo </h3>
-    <h4>hola mundo </h4>
-    <h5>hola mundo </h5>
-    <h6>hola mundo </h6>
-    <p>Lorem ipsum <b>dolor</b> sit amet, consectetur adipisicing elit. Voluptatibus nisi similique laudantium, porro quo amet repudiandae
-    quia facilis adipisci atque necessitatibus itaque sit sint omnis asperiores accusantium iste a consequuntur!</p>
-
-    <ol>
-        <li>manos</li>
-        <ul>
-            <li>escribir</li>
-            <li>golpear</li>
-            <li>agarrar</li>
-        </ul>
-        <li>piernas</li>
-        <ul>
-            <li>caminar</li>
-            <li>saltar </li>
-            <li>saltar</li>
-        </ul>
-        <li>ojos</li>
-        <ul>
-            <li>mirar</li>
-            <li>parpadear</li>
-            <li>guiñar</li>
-        </ul>
-        <li>boca</li>
-        <ul>
-            <li>gritar</li>
-            <li>hablar</li>
-            <li>bostezar</li>
-        </ul>
-
-
-    </ol>
-    <table border="1">
-        <thead>
-            <tr>
-                <th>nombres</th>
-                <th>edades</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>juan</td>
-                <td>24</td>
-            </tr>
-            <tr>
-                <td>pablo</td>
-                <td>19</td>
-            </tr>
-            <tr>
-                <td>maria</td>
-                <td>20</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <p></p>
-    <table border="1">
+       <table border="1">
         <thead>
             <tr>
                 <th># piezas</th>
@@ -137,9 +76,19 @@
                 <td><b>$</b>13,600.00</td>
                 <td><b>$</b>14,600.00</td>
             </tr>
+            <tr>
+                <td>900</td>
+                <td><b>$</b>16.00</td>
+                <td><b>$</b>14,400.00</td>
+                <td><b>$</b>15,400.00</td>
+            </tr>
+            <tr>
+                <td>1000</td>
+                <td><b>$</b>16.00</td>
+                <td><b>$</b>16,000.00</td>
+                <td><b>$</b>17,000.00</td>
+            </tr>
         </tbody>
     </table>
-
-    
 </body>
 </html>
